[gd_scene load_steps=5 format=3 uid="uid://b2cw7ggf68lwd"]

[ext_resource type="Script" path="res://Scripts/menu_control.gd" id="1_drl3a"]
[ext_resource type="Texture2D" uid="uid://bv6k0rgt5fflv" path="res://Assets/AppImages/AppBackground2.svg" id="2_18lyk"]
[ext_resource type="Theme" uid="uid://cvspf4xjenj4p" path="res://score_label.tres" id="3_gy8ja"]
[ext_resource type="Theme" uid="uid://ckug1xsi8idn6" path="res://option_buttons_theme.tres" id="8_xwnlu"]

[node name="Node2D" type="Node2D"]

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="MenuLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drl3a")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_18lyk")
expand_mode = 4

[node name="BestScore" type="Label" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -359.0
offset_top = 200.0
offset_right = 359.0
offset_bottom = 364.0
grow_horizontal = 2
theme = ExtResource("3_gy8ja")
text = "BestScore"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -251.0
offset_right = 233.5
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_xwnlu")
alignment = 1

[node name="start_button" type="Button" parent="MenuLayer/Control/MenuContainer"]
layout_mode = 2
text = "Start"

[node name="option_button" type="Button" parent="MenuLayer/Control/MenuContainer"]
layout_mode = 2
text = "Options"

[node name="quit_button" type="Button" parent="MenuLayer/Control/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionContainer" type="VBoxContainer" parent="MenuLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -181.0
offset_right = 189.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_xwnlu")

[node name="DifficultyButton" type="OptionButton" parent="MenuLayer/Control/OptionContainer"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="SoundButton" type="Button" parent="MenuLayer/Control/OptionContainer"]
layout_mode = 2
text = "Sound"

[node name="ExitMenu" type="Button" parent="MenuLayer/Control/OptionContainer"]
layout_mode = 2
text = "Exit"
icon_alignment = 1
